Added some screenshots for 15 minutes walking

--- a/notebooks/Fifteen Minutes Walking.ipynb
+++ b/notebooks/Fifteen Minutes Walking.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "990520d9",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
     "from arcgis.features import FeatureSet\n",
     "from arcgis.geometry.functions import project\n",
     "from geopedestrian.categories import CategoryRegistry\n",
-    "from geopedestrian.services import analyze_walking\n",
+    "from geopedestrian.services import analyze_walking, solve_walking, walk_from\n",
     "from georapid.client import GeoRapidClient\n",
     "from georapid.factory import EnvironmentClientFactory\n",
     "from ipywidgets import HBox, Layout"
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "9bf1182c",
    "metadata": {},
    "outputs": [],
@@ -52,7 +52,7 @@
    "id": "53dad989",
    "metadata": {},
    "source": [
-    "This function plots the result of a 15-minute walking analysis using the specified map view. The map view must be fully initialized before calling this function."
+    "This function plots the results of a 15-minute walking analysis using the specified map view. The map view must be fully initialized before calling these functions."
    ]
   },
   {
@@ -62,6 +62,79 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def plot_walking_areas(map_view, client: GeoRapidClient):\n",
+    "    \"\"\"\n",
+    "    Plots walking areas which are accessible by pedestrians using the specified map view.\n",
+    "    \n",
+    "    :param map_view: The map view defining the area of interest.\n",
+    "    :param client: The authenticated client instance for Rapid API.\n",
+    "    :return: Returns the walking areas as a spatially-enabled dataframe.\n",
+    "    \"\"\"\n",
+    "    # Project the map view center to WGS84\n",
+    "    spatial_reference = map_view.center['spatialReference']\n",
+    "    in_sr = spatial_reference['wkid']\n",
+    "    out_sr = 4326\n",
+    "    project_result = project([map_view.center], in_sr, out_sr)\n",
+    "    location = project_result[0]\n",
+    "    lat, lon = location.y, location.x\n",
+    "    \n",
+    "    # Solve the walking areas\n",
+    "    walking_result = solve_walking(client, lat, lon)\n",
+    "    walking_areas_sdf = FeatureSet.from_geojson(walking_result).sdf\n",
+    "    walking_areas_sdf.spatial.plot(map_view, renderer_type='u', col='ToBreak', cmap='RdYlGn', alpha=0.35)\n",
+    "    map_view.zoom_to_layer(walking_areas_sdf)\n",
+    "    return walking_areas_sdf\n",
+    "\n",
+    "def plot_walking_routes(map_view, client: GeoRapidClient, category_id: int):\n",
+    "    \"\"\"\n",
+    "    Plots walking routes to places which are accessible by pedestrians using the specified map view.\n",
+    "    \n",
+    "    :param map_view: The map view defining the area of interest.\n",
+    "    :param client: The authenticated client instance for Rapid API.\n",
+    "    :param category_id: The places category of interest.\n",
+    "    :return: Returns the walking routes as a spatially-enabled dataframe.\n",
+    "    \"\"\"\n",
+    "    # Project the map view center to WGS84\n",
+    "    spatial_reference = map_view.center['spatialReference']\n",
+    "    in_sr = spatial_reference['wkid']\n",
+    "    out_sr = 4326\n",
+    "    project_result = project([map_view.center], in_sr, out_sr)\n",
+    "    location = project_result[0]\n",
+    "    lat, lon = location.y, location.x\n",
+    "    \n",
+    "    # Solve the walking routes\n",
+    "    walking_result = walk_from(client, lat, lon, category_id)\n",
+    "    routes_geojson = walking_result['routes']\n",
+    "    routes_sdf = FeatureSet.from_geojson(routes_geojson).sdf\n",
+    "    routes_sdf.spatial.plot(map_view, renderer_type='s', palette=[0, 120, 0, 130], line_width=15)\n",
+    "    map_view.zoom_to_layer(routes_sdf)\n",
+    "    return routes_sdf\n",
+    "\n",
+    "def plot_places_nearby(map_view, client: GeoRapidClient, category_id: int):\n",
+    "    \"\"\"\n",
+    "    Plots places which are accessible by pedestrians using the specified map view.\n",
+    "    \n",
+    "    :param map_view: The map view defining the area of interest.\n",
+    "    :param client: The authenticated client instance for Rapid API.\n",
+    "    :param category_id: The places category of interest.\n",
+    "    :return: Returns the places as a spatially-enabled dataframe.\n",
+    "    \"\"\"\n",
+    "    # Project the map view center to WGS84\n",
+    "    spatial_reference = map_view.center['spatialReference']\n",
+    "    in_sr = spatial_reference['wkid']\n",
+    "    out_sr = 4326\n",
+    "    project_result = project([map_view.center], in_sr, out_sr)\n",
+    "    location = project_result[0]\n",
+    "    lat, lon = location.y, location.x\n",
+    "    \n",
+    "    # Solve the walking routes\n",
+    "    walking_result = walk_from(client, lat, lon, category_id)\n",
+    "    places_geojson = walking_result['places']\n",
+    "    places_sdf = FeatureSet.from_geojson(places_geojson).sdf\n",
+    "    places_sdf.spatial.plot(map_view)\n",
+    "    map_view.zoom_to_layer(places_sdf)\n",
+    "    return places_sdf\n",
+    "\n",
     "def plot_urban_walking(map_view, client: GeoRapidClient, category_id: int):\n",
     "    \"\"\"\n",
     "    Plots the 15 minutes walking analysis result using the specified map view.\n",
@@ -99,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "id": "53833da1",
    "metadata": {},
    "outputs": [],
@@ -117,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "3c5bb823",
    "metadata": {},
    "outputs": [],
@@ -146,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "5965c2c1",
    "metadata": {},
    "outputs": [],
@@ -156,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "7c368198",
    "metadata": {},
    "outputs": [],
@@ -175,14 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "b71dd637",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "edb5d8223b6c43c0a4f871840b994ee7",
+       "model_id": "e910533d4c7949009a42205d0315fe84",
        "version_major": 2,
        "version_minor": 0
       },
@@ -196,7 +269,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-af6b50df-5583-4db4-9d64-6b1c3382a608\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-72650fdb-5878-44dc-aaf3-b24ddd09a8f1\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -208,7 +281,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-html-embed-preview-af6b50df-5583-4db4-9d64-6b1c3382a608\"></div>"
+       "<div class=\"map-html-embed-preview-72650fdb-5878-44dc-aaf3-b24ddd09a8f1\"></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -225,7 +298,388 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
+   "id": "7aa5d8d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_walking_areas(paris_map, client)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "95bdb897",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2ccaaedb3f9d4372b4364e4d4b5136ff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "MapView(layout=Layout(height='400px', width='100%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"map-static-img-preview-7d6cea4e-d924-45c0-b1af-738f4507a9ca\"><img src=\"\"></img></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"map-html-embed-preview-7d6cea4e-d924-45c0-b1af-738f4507a9ca\"></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "paris_map = create_map_view(gis, 'Paris, France')\n",
+    "paris_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "26a62ca7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>placeId</th>\n",
+       "      <th>name</th>\n",
+       "      <th>from</th>\n",
+       "      <th>to</th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>SHAPE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>d5f202cbf3e1e1d3261b394ab7982336</td>\n",
+       "      <td>Musée de l'Histoire de France</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{\"x\": 2.357099, \"y\": 48.860024, \"spatialRefere...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3028d0c324e3b4fb83f40d9e42d5a836</td>\n",
+       "      <td>Musée Picasso</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{\"x\": 2.362286, \"y\": 48.859905, \"spatialRefere...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>e572d38397e895e9832118b3eafb61ba</td>\n",
+       "      <td>Musée de la Chasse et de la Nature</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{\"x\": 2.358624, \"y\": 48.861507, \"spatialRefere...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>e69c4813788b76e802e640c7b3dc9ae1</td>\n",
+       "      <td>Fondation Henri Cartier-Bresson</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>{\"x\": 2.359913, \"y\": 48.863244, \"spatialRefere...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>c2ab5c711d7591387317006c98d749f1</td>\n",
+       "      <td>Passage de Retz</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>{\"x\": 2.360545, \"y\": 48.861308, \"spatialRefere...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                            placeId                                name from  \\\n",
+       "0  d5f202cbf3e1e1d3261b394ab7982336       Musée de l'Histoire de France    5   \n",
+       "1  3028d0c324e3b4fb83f40d9e42d5a836                       Musée Picasso    5   \n",
+       "2  e572d38397e895e9832118b3eafb61ba  Musée de la Chasse et de la Nature    0   \n",
+       "3  e69c4813788b76e802e640c7b3dc9ae1     Fondation Henri Cartier-Bresson    0   \n",
+       "4  c2ab5c711d7591387317006c98d749f1                     Passage de Retz    0   \n",
+       "\n",
+       "   to  OBJECTID                                              SHAPE  \n",
+       "0  10         1  {\"x\": 2.357099, \"y\": 48.860024, \"spatialRefere...  \n",
+       "1  10         2  {\"x\": 2.362286, \"y\": 48.859905, \"spatialRefere...  \n",
+       "2   5         3  {\"x\": 2.358624, \"y\": 48.861507, \"spatialRefere...  \n",
+       "3   5         4  {\"x\": 2.359913, \"y\": 48.863244, \"spatialRefere...  \n",
+       "4   5         5  {\"x\": 2.360545, \"y\": 48.861308, \"spatialRefere...  "
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plot_places_nearby(paris_map, client, museum_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f82a898c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8fde465cdbd947d8ab2b1731ce140b08",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "MapView(layout=Layout(height='400px', width='100%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"map-static-img-preview-ff36802d-e2d2-450f-a17a-5837ec05f3f2\"><img src=\"\"></img></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"map-html-embed-preview-ff36802d-e2d2-450f-a17a-5837ec05f3f2\"></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "paris_map = create_map_view(gis, 'Paris, France')\n",
+    "paris_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6e69b56e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>total_minutes</th>\n",
+       "      <th>total_kilometers</th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>SHAPE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Fondation Henri Cartier-Bresson - Location 1</td>\n",
+       "      <td>2.19</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{\"paths\": [[[2.360091761000035, 48.86358195500...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Passage de Retz - Location 1</td>\n",
+       "      <td>4.27</td>\n",
+       "      <td>0.36</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{\"paths\": [[[2.3605823910000368, 48.8613948180...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Musée de la Chasse et de la Nature - Location 1</td>\n",
+       "      <td>4.56</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{\"paths\": [[[2.3585921190000363, 48.8615440690...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Musée Picasso - Location 1</td>\n",
+       "      <td>6.53</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>4</td>\n",
+       "      <td>{\"paths\": [[[2.362382298000057, 48.86006192600...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Musée de l'Histoire de France - Location 1</td>\n",
+       "      <td>7.25</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>{\"paths\": [[[2.357057196000028, 48.85996773100...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              name total_minutes  \\\n",
+       "0     Fondation Henri Cartier-Bresson - Location 1          2.19   \n",
+       "1                     Passage de Retz - Location 1          4.27   \n",
+       "2  Musée de la Chasse et de la Nature - Location 1          4.56   \n",
+       "3                       Musée Picasso - Location 1          6.53   \n",
+       "4       Musée de l'Histoire de France - Location 1          7.25   \n",
+       "\n",
+       "  total_kilometers  OBJECTID  \\\n",
+       "0             0.18         1   \n",
+       "1             0.36         2   \n",
+       "2             0.38         3   \n",
+       "3             0.54         4   \n",
+       "4              0.6         5   \n",
+       "\n",
+       "                                               SHAPE  \n",
+       "0  {\"paths\": [[[2.360091761000035, 48.86358195500...  \n",
+       "1  {\"paths\": [[[2.3605823910000368, 48.8613948180...  \n",
+       "2  {\"paths\": [[[2.3585921190000363, 48.8615440690...  \n",
+       "3  {\"paths\": [[[2.362382298000057, 48.86006192600...  \n",
+       "4  {\"paths\": [[[2.357057196000028, 48.85996773100...  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "plot_walking_routes(paris_map, client, museum_id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e6320e02",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "aba898cb03f94aadbd41c1bdef253117",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "MapView(layout=Layout(height='400px', width='100%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"map-static-img-preview-a0f94ddf-4742-4ec0-9e4d-e6e659671c10\"><img src=\"\"></img></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"map-html-embed-preview-a0f94ddf-4742-4ec0-9e4d-e6e659671c10\"></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "paris_map = create_map_view(gis, 'Paris, France')\n",
+    "paris_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "5bf23192",
    "metadata": {},
    "outputs": [
@@ -320,7 +774,7 @@
        "7    1         8  {\"rings\": [[[2.3666303491297653, 48.8589715192..."
       ]
      },
-     "execution_count": 36,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
