Updated the documentation

--- a/notebooks/Fifteen Minutes Walking.ipynb
+++ b/notebooks/Fifteen Minutes Walking.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 32,
    "id": "990520d9",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
     "from arcgis.features import FeatureSet\n",
     "from arcgis.geometry.functions import project\n",
     "from geopedestrian.categories import CategoryRegistry\n",
-    "from geopedestrian.services import analyze_walking, solve_walking, walk_from\n",
+    "from geopedestrian.services import analyze_walking, solve_walking, walk_to\n",
     "from georapid.client import GeoRapidClient\n",
     "from georapid.factory import EnvironmentClientFactory\n",
     "from ipywidgets import HBox, Layout"
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "dbc8cce1",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
     "    lat, lon = location.y, location.x\n",
     "    \n",
     "    # Solve the walking routes\n",
-    "    walking_result = walk_from(client, lat, lon, category_id)\n",
+    "    walking_result = walk_to(client, lat, lon, category_id)\n",
     "    routes_geojson = walking_result['routes']\n",
     "    routes_sdf = FeatureSet.from_geojson(routes_geojson).sdf\n",
     "    routes_sdf.spatial.plot(map_view, renderer_type='s', palette=[0, 120, 0, 130], line_width=15)\n",
@@ -128,7 +128,7 @@
     "    lat, lon = location.y, location.x\n",
     "    \n",
     "    # Solve the walking routes\n",
-    "    walking_result = walk_from(client, lat, lon, category_id)\n",
+    "    walking_result = walk_to(client, lat, lon, category_id)\n",
     "    places_geojson = walking_result['places']\n",
     "    places_sdf = FeatureSet.from_geojson(places_geojson).sdf\n",
     "    places_sdf.spatial.plot(map_view)\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "53833da1",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "3c5bb823",
    "metadata": {},
    "outputs": [],
@@ -248,14 +248,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "id": "b71dd637",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e910533d4c7949009a42205d0315fe84",
+       "model_id": "ad528a93b99340c2bcbefa7d3ec9de97",
        "version_major": 2,
        "version_minor": 0
       },
@@ -269,7 +269,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-72650fdb-5878-44dc-aaf3-b24ddd09a8f1\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-2f12a075-373f-4ffc-8f79-1f514997f21f\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -281,7 +281,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-html-embed-preview-72650fdb-5878-44dc-aaf3-b24ddd09a8f1\"></div>"
+       "<div class=\"map-html-embed-preview-2f12a075-373f-4ffc-8f79-1f514997f21f\"></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -298,24 +298,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "7aa5d8d2",
+   "execution_count": 37,
+   "id": "0ccf35be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ObjectID</th>\n",
+       "      <th>FacilityID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>FromBreak</th>\n",
+       "      <th>ToBreak</th>\n",
+       "      <th>Shape_Length</th>\n",
+       "      <th>Shape_Area</th>\n",
+       "      <th>SHAPE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Location 1 : 10 - 15</td>\n",
+       "      <td>10</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.16074544855783407</td>\n",
+       "      <td>0.00024655239956060897</td>\n",
+       "      <td>{\"rings\": [[[2.361794926000073, 48.87342079400...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Location 1 : 5 - 10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.09336814723855202</td>\n",
+       "      <td>0.0001481029247122904</td>\n",
+       "      <td>{\"rings\": [[[2.3626932370000304, 48.8700521280...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Location 1 : 0 - 5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0.030366068129901422</td>\n",
+       "      <td>5.189780749956513e-05</td>\n",
+       "      <td>{\"rings\": [[[2.362468659000058, 48.86713261600...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ObjectID FacilityID                  Name FromBreak ToBreak  \\\n",
+       "0         1          1  Location 1 : 10 - 15        10      15   \n",
+       "1         2          1   Location 1 : 5 - 10         5      10   \n",
+       "2         3          1    Location 1 : 0 - 5         0       5   \n",
+       "\n",
+       "           Shape_Length              Shape_Area  \\\n",
+       "0   0.16074544855783407  0.00024655239956060897   \n",
+       "1   0.09336814723855202   0.0001481029247122904   \n",
+       "2  0.030366068129901422   5.189780749956513e-05   \n",
+       "\n",
+       "                                               SHAPE  \n",
+       "0  {\"rings\": [[[2.361794926000073, 48.87342079400...  \n",
+       "1  {\"rings\": [[[2.3626932370000304, 48.8700521280...  \n",
+       "2  {\"rings\": [[[2.362468659000058, 48.86713261600...  "
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "plot_walking_areas(paris_map, client)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "95bdb897",
+   "execution_count": 38,
+   "id": "55da7a8e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2ccaaedb3f9d4372b4364e4d4b5136ff",
+       "model_id": "9035f280f1454ff9883c9d97fdfdd2fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -329,7 +420,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-7d6cea4e-d924-45c0-b1af-738f4507a9ca\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-a743984f-493e-4f90-ad2f-6689d9037297\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -341,7 +432,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-html-embed-preview-7d6cea4e-d924-45c0-b1af-738f4507a9ca\"></div>"
+       "<div class=\"map-html-embed-preview-a743984f-493e-4f90-ad2f-6689d9037297\"></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -358,8 +449,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "26a62ca7",
+   "execution_count": 39,
+   "id": "f7f7e55c",
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +548,7 @@
        "4   5         5  {\"x\": 2.360545, \"y\": 48.861308, \"spatialRefere...  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,14 +559,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "f82a898c",
+   "execution_count": 43,
+   "id": "c242a38b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8fde465cdbd947d8ab2b1731ce140b08",
+       "model_id": "97d443557b4e4463ac416eadacd552be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -489,7 +580,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-static-img-preview-ff36802d-e2d2-450f-a17a-5837ec05f3f2\"><img src=\"\"></img></div>"
+       "<div class=\"map-static-img-preview-cf0ee85a-3ab9-4ae9-bbbc-86d3fd427ab2\"><img src=\"\"></img></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -501,7 +592,7 @@
     {
      "data": {
       "text/html": [
-       "<div class=\"map-html-embed-preview-ff36802d-e2d2-450f-a17a-5837ec05f3f2\"></div>"
+       "<div class=\"map-html-embed-preview-cf0ee85a-3ab9-4ae9-bbbc-86d3fd427ab2\"></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -518,8 +609,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "6e69b56e",
+   "execution_count": 44,
+   "id": "7ab6f2a5",
    "metadata": {},
    "outputs": [
     {
@@ -553,43 +644,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Fondation Henri Cartier-Bresson - Location 1</td>\n",
+       "      <td>Location 1 - Fondation Henri Cartier-Bresson</td>\n",
        "      <td>2.19</td>\n",
        "      <td>0.18</td>\n",
        "      <td>1</td>\n",
-       "      <td>{\"paths\": [[[2.360091761000035, 48.86358195500...</td>\n",
+       "      <td>{\"paths\": [[[2.3617855870000426, 48.8635913520...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Passage de Retz - Location 1</td>\n",
+       "      <td>Location 1 - Passage de Retz</td>\n",
        "      <td>4.27</td>\n",
        "      <td>0.36</td>\n",
        "      <td>2</td>\n",
-       "      <td>{\"paths\": [[[2.3605823910000368, 48.8613948180...</td>\n",
+       "      <td>{\"paths\": [[[2.3617855870000426, 48.8635913520...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Musée de la Chasse et de la Nature - Location 1</td>\n",
+       "      <td>Location 1 - Musée de la Chasse et de la Nature</td>\n",
        "      <td>4.56</td>\n",
        "      <td>0.38</td>\n",
        "      <td>3</td>\n",
-       "      <td>{\"paths\": [[[2.3585921190000363, 48.8615440690...</td>\n",
+       "      <td>{\"paths\": [[[2.3617855870000426, 48.8635913520...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Musée Picasso - Location 1</td>\n",
+       "      <td>Location 1 - Musée Picasso</td>\n",
        "      <td>6.53</td>\n",
        "      <td>0.54</td>\n",
        "      <td>4</td>\n",
-       "      <td>{\"paths\": [[[2.362382298000057, 48.86006192600...</td>\n",
+       "      <td>{\"paths\": [[[2.3617855870000426, 48.8635913520...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Musée de l'Histoire de France - Location 1</td>\n",
+       "      <td>Location 1 - Musée de l'Histoire de France</td>\n",
        "      <td>7.25</td>\n",
        "      <td>0.6</td>\n",
        "      <td>5</td>\n",
-       "      <td>{\"paths\": [[[2.357057196000028, 48.85996773100...</td>\n",
+       "      <td>{\"paths\": [[[2.3617855870000426, 48.8635913520...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -597,11 +688,11 @@
       ],
       "text/plain": [
        "                                              name total_minutes  \\\n",
-       "0     Fondation Henri Cartier-Bresson - Location 1          2.19   \n",
-       "1                     Passage de Retz - Location 1          4.27   \n",
-       "2  Musée de la Chasse et de la Nature - Location 1          4.56   \n",
-       "3                       Musée Picasso - Location 1          6.53   \n",
-       "4       Musée de l'Histoire de France - Location 1          7.25   \n",
+       "0     Location 1 - Fondation Henri Cartier-Bresson          2.19   \n",
+       "1                     Location 1 - Passage de Retz          4.27   \n",
+       "2  Location 1 - Musée de la Chasse et de la Nature          4.56   \n",
+       "3                       Location 1 - Musée Picasso          6.53   \n",
+       "4       Location 1 - Musée de l'Histoire de France          7.25   \n",
        "\n",
        "  total_kilometers  OBJECTID  \\\n",
        "0             0.18         1   \n",
@@ -611,14 +702,14 @@
        "4              0.6         5   \n",
        "\n",
        "                                               SHAPE  \n",
-       "0  {\"paths\": [[[2.360091761000035, 48.86358195500...  \n",
-       "1  {\"paths\": [[[2.3605823910000368, 48.8613948180...  \n",
-       "2  {\"paths\": [[[2.3585921190000363, 48.8615440690...  \n",
-       "3  {\"paths\": [[[2.362382298000057, 48.86006192600...  \n",
-       "4  {\"paths\": [[[2.357057196000028, 48.85996773100...  "
+       "0  {\"paths\": [[[2.3617855870000426, 48.8635913520...  \n",
+       "1  {\"paths\": [[[2.3617855870000426, 48.8635913520...  \n",
+       "2  {\"paths\": [[[2.3617855870000426, 48.8635913520...  \n",
+       "3  {\"paths\": [[[2.3617855870000426, 48.8635913520...  \n",
+       "4  {\"paths\": [[[2.3617855870000426, 48.8635913520...  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "e6320e02",
+   "id": "947199d9",
    "metadata": {},
    "outputs": [
     {
