Updated the 15 minutes notebook

--- a/notebooks/Fifteen Minutes Walking.ipynb
+++ b/notebooks/Fifteen Minutes Walking.ipynb
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "0ccf35be",
+   "id": "4f8f2a00",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "55da7a8e",
+   "id": "55416004",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "f7f7e55c",
+   "id": "37fdb8e8",
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c242a38b",
+   "id": "d6ea7c7c",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "7ab6f2a5",
+   "id": "893f6d9a",
    "metadata": {},
    "outputs": [
     {
@@ -721,8 +721,10 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "947199d9",
-   "metadata": {},
+   "id": "5ee3affa",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
